[Core][API] improve ServiceAccount CRD with improved API key handling and update status reconciliation logic
[Core][API] improve ServiceAccount CRD with improved API key handling and update status reconciliation logic

Squashed commit of the following:

commit 1091a214bb949a9f1a18e3c0eebfbb0933a51de7
Author: Simo Lin <simo.lin@oracle.com>
Date:   Thu Feb 20 18:56:49 2025 -0800

    [Core][API] improve ServiceAccount CRD with improved API key handling and update status reconciliation logic
